// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={10000}
      createdAt={"1970-01-01T00:00:00.000Z"}
      description="car"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={1000}
      createdAt={"1969-12-28T00:00:00.000Z"}
      description="rent"
      id="2"
      key="2"
      note="first of the month"
    />
    <ExpenseListItem
      amount={10}
      createdAt={"1970-01-05T00:00:00.000Z"}
      description="coffee"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
